# parallel-programming

lab1/: CMakeLists.txt  analyze.py  lab1  main.cpp  results.csv
lab2/: CMakeLists_lab2.txt  itasksys.h  lab2  main.cpp  tasksys.cpp  tasksys.h
lab3_2/: find_repeats.cu  find_repeats_nc.cu
lab4/section_1/: app.js  messages.json  package-lock.json  package.json
lab4/section_1/public/: index.html
lab4/section_2/: heat_diffusion  heat_diffusion.c  output_1000000_steps.csv  output_10000_steps.csv  output_1000_steps.csv  output_100_steps.csv  output_1_steps.csv  output_20000000_steps.csv  output_20_steps.csv  output_2_steps.csv  output_3_steps.csv  plot_results.py
lab5/: find_pi  find_pi.c
